# data_vista

./: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  environment.yml  pyproject.toml  roadmap.md  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/data_vista/: __init__.py  cli.py
tests/: __init__.py  test_data_vista.py
