[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_vista"
version = "0.1.0"
description = "A universal exploratory data analysis package"
readme = "README.rst"
authors = [
  {name = "Samuel Adetsi", email = "abdulrahmanadetsi@gmail.com"}
]
maintainers = [
  {name = "Samuel Adetsi", email = "abdulrahmanadetsi@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Abdul-Rahmann/data_vista/issues"
changelog = "https://github.com/Abdul-Rahmann/data_vista/blob/master/changelog.md"
homepage = "https://github.com/Abdul-Rahmann/data_vista"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

